SBVTestSuite/TestSuite/CompileTests/SCase/SCase31.stderr
SCase31.hs:13:1: error: [GHC-39584]
    mkSymbolic: Unsupported constructor kind
      Datatype   : A
      Constructor: F
      Kind       : GHC.Num.Integer.Integer -> GHC.Types.Bool
      
      Higher order fields (i.e., function values) are not supported.

   |
13 | mkSymbolic [''A]
   | ^^^^^^^^^^^^^^^^

